[gd_scene load_steps=2 format=2]

[ext_resource path="res://dev_tools/DevControls.gd" type="Script" id=1]

[node name="DevControls" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 247.0
margin_bottom = 432.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_right = 108.0
margin_bottom = 136.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer"]
margin_right = 216.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 231.5, 184 )
text = "Toggle Bounce Shield"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ToggleMusic" type="CheckButton" parent="Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 216.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 231.5, 184 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ToggleEnemySpawn" type="CheckButton" parent="Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 216.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 231.5, 184 )
text = "Enemy Spawner"
__meta__ = {
"_editor_description_": ""
}

[node name="ToggleEnemyMovement" type="CheckButton" parent="Panel/VBoxContainer"]
margin_top = 132.0
margin_right = 216.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 231.5, 184 )
text = "Enemy Movement"
__meta__ = {
"_editor_description_": ""
}

[node name="GenerateChiquito" type="Button" parent="Panel/VBoxContainer"]
margin_top = 176.0
margin_right = 216.0
margin_bottom = 196.0
text = "Generate Chiquito"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateVicentin" type="Button" parent="Panel/VBoxContainer"]
margin_top = 200.0
margin_right = 216.0
margin_bottom = 220.0
text = "Generate Vicentin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateMrT" type="Button" parent="Panel/VBoxContainer"]
margin_top = 224.0
margin_right = 216.0
margin_bottom = 244.0
text = "Generate MrT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateTeresiica" type="Button" parent="Panel/VBoxContainer"]
margin_top = 248.0
margin_right = 216.0
margin_bottom = 268.0
text = "Generate Teresiica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUp" type="Button" parent="Panel/VBoxContainer"]
margin_top = 272.0
margin_right = 216.0
margin_bottom = 292.0
text = "Level Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelDown" type="Button" parent="Panel/VBoxContainer"]
margin_top = 296.0
margin_right = 216.0
margin_bottom = 316.0
text = "Level Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrantLife" type="Button" parent="Panel/VBoxContainer"]
margin_top = 320.0
margin_right = 216.0
margin_bottom = 340.0
text = "Grant Life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WipeLeaderboardScores" type="Button" parent="Panel/VBoxContainer"]
margin_top = 344.0
margin_right = 216.0
margin_bottom = 364.0
text = "Wipe Leaderboard"

[node name="BoardName" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 368.0
margin_right = 216.0
margin_bottom = 392.0
text = "tests"

[node name="TestScoreSend" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 396.0
margin_right = 216.0
margin_bottom = 420.0

[node name="Button" type="Button" parent="Panel/VBoxContainer/TestScoreSend"]
margin_right = 43.0
margin_bottom = 24.0
text = "Send"

[node name="Score" type="LineEdit" parent="Panel/VBoxContainer/TestScoreSend"]
margin_left = 47.0
margin_right = 105.0
margin_bottom = 24.0
text = "100000"

[node name="Name" type="LineEdit" parent="Panel/VBoxContainer/TestScoreSend"]
margin_left = 109.0
margin_right = 216.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "InThorinRain"

[connection signal="toggled" from="Panel/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/ToggleMusic" to="." method="_on_ToggleMusic_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/ToggleEnemySpawn" to="." method="_on_ToggleEnemySpawn_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/ToggleEnemyMovement" to="." method="_on_ToggleEnemyMovement_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/GenerateChiquito" to="." method="_on_GenerateChiquito_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GenerateVicentin" to="." method="_on_GenerateVicentin_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GenerateMrT" to="." method="_on_GenerateMrT_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GenerateTeresiica" to="." method="_on_GenerateTeresiica_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LevelUp" to="." method="_on_LevelUp_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LevelDown" to="." method="_on_LevelDown_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GrantLife" to="." method="_on_GrantLife_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/WipeLeaderboardScores" to="." method="_on_WipeLeaderboardScores_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/TestScoreSend/Button" to="." method="_on_Button_pressed"]
